[gd_scene format=3 uid="uid://cdoksexcakmop"]

[ext_resource type="PackedScene" uid="uid://y5a4e3ajuy2r" path="res://scenes/StonePlatform.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://datfp8kxjrjg" path="res://scenes/BlueShip.tscn" id="2"]
[ext_resource type="Script" uid="uid://bsuv2svmaqypq" path="res://scenes/PlatformBlue.gd" id="3"]
[ext_resource type="Script" uid="uid://x2rdmjyr1ttw" path="res://scenes/ObjectiveArea.gd" id="4"]
[ext_resource type="Script" uid="uid://buha0qve47owk" path="res://scenes/blue_ship.gd" id="4_ykko5"]
[ext_resource type="Texture2D" uid="uid://dh610bbucs6rh" path="res://assets/fasilkom.png" id="6_xum0q"]
[ext_resource type="PackedScene" uid="uid://b5a4ynav86ee6" path="res://scenes/Meteor.tscn" id="6_yxyfn"]
[ext_resource type="Script" uid="uid://2ms6txwrircs" path="res://scenes/out_of_bounds.gd" id="8_huru0"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(138.75, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wcvik"]
size = Vector2(697, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ib6r"]
size = Vector2(697, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2cvyt"]
size = Vector2(1173.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4t260"]
size = Vector2(1173.5, 20)

[node name="MainLevel" type="Node" unique_id=832108525]

[node name="PlatformBlue" type="Node2D" parent="." unique_id=1028510209]
position = Vector2(35, 565)
script = ExtResource("3")

[node name="StonePlatform3" parent="PlatformBlue" unique_id=1127170183 instance=ExtResource("1")]

[node name="StonePlatform4" parent="PlatformBlue" unique_id=266156621 instance=ExtResource("1")]
position = Vector2(70, 0)

[node name="StonePlatform" parent="PlatformBlue" unique_id=964098601 instance=ExtResource("1")]
position = Vector2(999, 31)

[node name="StonePlatform2" parent="PlatformBlue" unique_id=1594265889 instance=ExtResource("1")]
position = Vector2(1069, 31)

[node name="BlueShip" parent="." unique_id=150247224 instance=ExtResource("2")]
position = Vector2(72.7009, 421.901)
lock_rotation = true
freeze_mode = 1
script = ExtResource("4_ykko5")
thrust_force = 2400.0
horizontal_force = 300.0
max_speed = 1200.0

[node name="ObjectiveArea" type="Area2D" parent="." unique_id=779178061]
script = ExtResource("4")
target_scene_path = "res://scenes/SecondLevel.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea" unique_id=670694693]
position = Vector2(1068, 517)
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="ObjectiveArea" unique_id=1545912824]
position = Vector2(1069, 517)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_xum0q")

[node name="Meteors" type="Node2D" parent="." unique_id=1403441345]
position = Vector2(969, 583)
rotation = -3.1415925

[node name="Meteor2" parent="Meteors" unique_id=71035417 instance=ExtResource("6_yxyfn")]
position = Vector2(526, 150.99985)
rotation = -2.268928

[node name="Meteor7" parent="Meteors" unique_id=1522138054 instance=ExtResource("6_yxyfn")]
position = Vector2(-82.99992, 529)

[node name="Meteor5" parent="Meteors" unique_id=1512741036 instance=ExtResource("6_yxyfn")]
position = Vector2(479, -17.999983)
rotation = -1.0471976

[node name="Meteor3" parent="Meteors" unique_id=1927485398 instance=ExtResource("6_yxyfn")]
position = Vector2(585, 18.999832)
rotation = -1.3962636

[node name="Meteor9" parent="Meteors" unique_id=768781936 instance=ExtResource("6_yxyfn")]
position = Vector2(894.0001, 501.99988)
scale = Vector2(1.5, 1.5)

[node name="Meteor8" parent="Meteors" unique_id=685590935 instance=ExtResource("6_yxyfn")]
position = Vector2(-104.999916, 415.00003)
rotation = -3.1415925
scale = Vector2(1.5, 1.5)

[node name="Meteor6" parent="Meteors" unique_id=1361034573 instance=ExtResource("6_yxyfn")]
position = Vector2(66.00006, 482)
scale = Vector2(1.9, 1.9)

[node name="Meteor4" parent="Meteors" unique_id=915173516 instance=ExtResource("6_yxyfn")]
position = Vector2(22.000015, 288.00003)
rotation = -1.5707964
scale = Vector2(2, 2)

[node name="Meteor" parent="Meteors" unique_id=1780730153 instance=ExtResource("6_yxyfn")]
position = Vector2(522, 333.99994)
rotation = 3.1415925
scale = Vector2(2, 2)

[node name="OutOfBounds" type="Area2D" parent="." unique_id=54011810]
script = ExtResource("8_huru0")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="OutOfBounds" unique_id=507055724]
position = Vector2(1180, 321)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_wcvik")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OutOfBounds" unique_id=1703259293]
position = Vector2(-29, 313.5)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_6ib6r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds" unique_id=1199297349]
position = Vector2(576.25, -19)
shape = SubResource("RectangleShape2D_2cvyt")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="OutOfBounds" unique_id=1380782197]
position = Vector2(576, 668)
shape = SubResource("RectangleShape2D_4t260")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1387410533]
process_mode = 2

[node name="Label" type="Label" parent="CanvasLayer" unique_id=1279954739]
visible = false
offset_left = 172.0
offset_top = 274.0
offset_right = 379.0
offset_bottom = 297.0
theme_override_font_sizes/font_size = 64
text = "Anjay jago banget bang!ðŸ˜Ž"

[node name="RestartButton" type="Button" parent="CanvasLayer" unique_id=249289776]
process_mode = 2
visible = false
offset_left = 388.0
offset_top = 394.0
offset_right = 508.0
offset_bottom = 447.0
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="NextButton" type="Button" parent="CanvasLayer" unique_id=1066790748]
process_mode = 2
visible = false
offset_left = 559.0
offset_top = 395.0
offset_right = 730.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 32
text = "Next Level"

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
[connection signal="pressed" from="CanvasLayer/RestartButton" to="ObjectiveArea" method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/NextButton" to="ObjectiveArea" method="_on_next_button_pressed"]
